--- a/latex/explicit_pde_solutions.tex
+++ b/latex/explicit_pde_solutions.tex
@@ -37,7 +37,7 @@ z & = & \rho \sin \theta.
 
 
 \section{Vortex Rollup}
-%\label{sec:vortex_rollup}
+\label{sec:vortex_rollup}
 
 The first test case demonstrates vortex roll-up of a fluid on the surface of a unit sphere. An angular velocity field causes the initial condition to spin into two diametrically opposed but stationary vortices.
 
