--- a/latex/karen.tex
+++ b/latex/karen.tex
@@ -62,7 +62,8 @@
 \include{rbffd_avoid_pole_singularities}
 \include{rbffd_weights_on_sphere}
 \include{cut_from_distributed_solver}
-\include{optimizations}
+\include{keeneland_benchmarks}
+\include{spear_benchmarks}
 
 %\include{stokes_revisited}
 
