--- a/latex/merged_references.bib
+++ b/latex/merged_references.bib
@@ -2,12 +2,21 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Evan Bollig at 2013-10-24 23:49:38 -0500 
+%% Created for Evan Bollig at 2013-10-28 03:29:47 -0500 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@misc{M2090,
+	Author = {NVIDIA},
+	Date-Added = {2013-10-28 08:28:01 +0000},
+	Date-Modified = {2013-10-28 08:29:47 +0000},
+	Howpublished = {Datasheet},
+	Month = {May},
+	Title = {Tesla M-Class GPU Computing Modules},
+	Year = {2011}}
 
 @misc{Wildemann2009,
 	Abstract = {This report compares parallel preconditioners for 3D Stokes 
