Continuing with new figures for Appendix A

--- a/latex/karen.tex
+++ b/latex/karen.tex
@@ -51,6 +51,7 @@
 %\include{ordering_and_preconditioning}
 \include{gpu_solver}
 %\include{distributed_solver}
+\include{multigpu_rbffd}
 %
 %\include{explicit_pde_solutions}
 \include{implicit_pde_solutions}
@@ -63,7 +64,7 @@
 %\include{rbffd_weights_on_sphere}
 \include{cut_from_distributed_solver}
 \include{keeneland_benchmarks}
-\include{spear_benchmarks}
+%\include{spear_benchmarks}
 
 %\include{stokes_revisited}
 
