--- a/latex/keeneland_benchmarks.tex
+++ b/latex/keeneland_benchmarks.tex
@@ -3,96 +3,117 @@
 \chapter{Keeneland Benchmarks}
 \label{app:keeneland_alltoallv_benchmarks}
 
-The benchmarks in our first paper (\cite{BolligFlyerErlebacher2012}) demonstrated the initial scaling of the implementation for a distributed RK4 iteration using primitive blocking MPI\_Send/MPI\_Recv communication routines. The collective was a round-robin all-to-subset connection between processors, each taking a turn to send data (0 or more bytes) or otherwise wait to receive data. Blocking communication was implemented for code verification, and the linear-in-$x$ partitioning was employed. Benchmarks in \cite{BolligFlyerErlebacher2012} were acquired on the multi-GPU cluster named Keeneland (\cite{Vetter2011}). 
+This appendix provides new data from Keeneland, a supercomputing cluster designed with 240 twelve-core Intel Xeon 5660 (2.80GHz) CPUs, 12MB cache per core shared between twelve cores, 24GB system memory, and 360 NVidia M2070 GPUs with 6GB of device memory and 14 multiprocessors each \cite{Vetter2011}.  A high level layout of the Keeneland system is presented in Figure~\ref{fig:keeneland}. The system was designed with its 240 CPUs partitioned into sets of two CPUs per compute node, four nodes per chassis, and six chassis per rack. An InfiniBand QDR Network handles inter-node communication. In addition to the dual CPUs, each node has three NVidia M2070 Fermi class GPUs.
 
-The implementation demonstrated poor scaling behavior as blocking collectives serialized transmissions, and every process had to wait until the end of the collective to proceed. The objective in \cite{BolligFlyerErlebacher2012}, however, was not to present a well tuned distributed GPU implementation of RBF-FD. Instead we focused on the design decisions for partitioning, index mapping, etc. and verification of both single and distributed GPU implementations as inefficient as they were. 
+\begin{figure}
+\centering
+\includegraphics[width=0.5\textwidth]{../figures/paper1/figures/omnigraffle/Keeneland.pdf}
+\caption{The Keeneland Initial Delivery System (KIDS), a multi-GPU cluster with 360 GPUs and 240 CPUs capable of 201 TFLOP/sec.}
+\label{fig:keeneland}
+\end{figure}
 
+At the onset of this dissertation, the KID system provided the initial development environment for our multi-CPU and multi-GPU implementation. In Spring 2012, the KID system was upgraded to the Keeneland Full Scale (KFS) system and the M2070 GPUs (150 Gbyte/sec bandwidth) were replaced by M2090 GPUs (177 Gbyte/sec \cite{M2090}). 
 
-This appendix provides new data from Keeneland for direct comparison with \cite{BolligFlyerErlebacher2012}. All data in this Appendix was acquired prior to the 2012 upgrade from the Keeneland Initial Delivery System (KIDS) to the Keeneland Full Scale system (KFS). As such, benchmarks were gathered on NVidia M2070 GPUs (150 GByte/sec bandwidth), rather than the newer M2090 GPUs (177 GByte/sec bandwidth) \cite{M2090}. 
+All data in this Appendix was acquired prior to the 2012 upgrade and is provided for direct comparison with our first paper (\cite{BolligFlyerErlebacher2012}), which demonstrated scaling of the test cases in \S~\ref{sec:cosine_bell} and \S~\ref{sec:vortex_rollup}. The distributed RK4 iteration utilized the primitive MPI\_Send/MPI\_Recv communication routines to simulate a round-robin, all-to-subset collective where each processor took a turn to send data (0 or more bytes) or otherwise waited to receive messages. The choice of blocking routines were useful for code verification. 
 
-%was similarly acquired on the Keeneland GPU cluster but tests the MPI\_Alltoallv collective. It is provided for comparison with \cite{BolligFlyerErlebacher2012}.
+The implementation demonstrated poor scaling behavior as blocking collectives serialized transmissions, and every processor had to wait until the end of the collective to proceed. A linear-in-$x$ partitioning was also employed on the sphere, which only worsens scaling (as shown in Section~\ref{sec:load_balance}). However, the objective in \cite{BolligFlyerErlebacher2012}, was not to present a well tuned implementation of RBF-FD for distributed GPU environments. Rather, we focused on the design decisions for partitioning, index mapping, etc. and verification of both single and distributed GPU implementations---as inefficient as they were. 
+
+The benchmarks provided here replace the serialized sends and receives with an MPI\_Alltoallv. Communication times have dropped significantly and improved scaling of the implementation. The linear partitioning remains, although the effects of the imbalanced workloads are not apparent because benchmarks only scale up to 10 GPUs with one process (i.e., one GPU) per node. All benchmarks on the GPU measure runtime of the custom OpenCL kernels described in Section~\ref{sec:custom_gpu_kernels}.  
+
+Unfortunately, shortly after the transition from KIDs to KFS our research allocation expired leaving scaling benchmarks for greater than 10 GPUs untested. The tuning efforts in Chapters~\ref{chap:distributed_rbffd} and \ref{chap:multigpu_rbffd} that provided load balancing and added overlapping communication and computation were completed too late to test on Keeneland. 
+
 
 \section{Cosine Bell Advection on Keeneland} 
 
-This section considers the performance of a full RK4 iteration for the Cosine Bell Advection test case in \S~\ref{sec:cosine_bell}. As discussed in Chapter~\ref{chap:gpu_rbffd}, a regular SpMV involves $(2Nn)$ FLOPs. Intermediate steps of the RK4 (i.e., the evaluations of $F(t,\vu)$) perform three SpMV operations: one for each $D_{\theta}$, $D_{\lambda}$ and $D_{hv}$, plus four vector operations to join SpMV results and prepare the input for the next intermediate step. The cost of an intermediate step is therefore estimated at $(6Nn + 4N)$ FLOPs. In that case, the Cosine Bell RK4 iteration with four intermediate steps plus another $5N$ FLOP overhead to combine intermediate solutions totals to approximately $(24Nn + 23N)$ FLOPs. 
+Here we consider the performance of a full RK4 iteration for the Cosine Bell Advection test case in \S~\ref{sec:cosine_bell}. As discussed in Chapter~\ref{chap:gpu_rbffd}, a regular SpMV involves $(2Nn)$ FLOPs. Intermediate evaluations in the RK4 time-step (i.e., the steps $k_{1 ... 4}$ in Equation~\ref{eqn:rk4}) perform three SpMV operations: one for each $D_{\theta}$, $D_{\lambda}$ and $D_{hv}$, plus another seven vector operations to scale and join derivatives ($5N$) and prep the input for the subsequent evaluation ($2N$). The cost of evaluating an intermediate step is therefore estimated at $(6Nn + 7N)$ FLOPs. In that case, the four evaluations of an RK4 Cosine Bell iteration, plus an additional $5N$ FLOPs overhead to combine intermediate solutions totals to: $(24Nn + 33N)$ FLOPs. 
 
-Figures~\ref{fig:gflops_cpu_1proc_keeneland}, \ref{fig:gflops_gpu_1proc_oneWarp_keeneland} and \ref{fig:gflops_gpu_1proc_oneThread_keeneland}, each function evaluation in the RK4 performs three independent SpMVs and two AXPY operations ($2*N$ each) for a total of $6*N*n + 4*N$ operations. Thus the total operation count for a single RK4 iteration is estimated at: $24*N*n +23*N$. 
-For Vortex Roll-up, only two SpMVs and one AXPY are required, which drops the total operation count to: $16*N*n + 15*N$. 
+The Vortex Roll-Up from \S~\ref{sec:cosine_bell} computes only two SpMVs per intermediate evaluation of the RK4 time-step for a cost of $(4Nn + 5N)$. Following the same logic for the RK4 iteration we arrive at the total estimate: $(16Nn + 25N)$ FLOPs. 
 
-Figure~\ref{fig:gflops_cpu_1proc_keeneland} provides the GFLOP/sec for Cosine Bell Advection on the Keeneland GPU cluster for a single CPU running the nested loop evaluation, optimized with auto-vectorization and auto-blocking provided by the Intel compiler. Figure~\ref{fig:gflops_gpu_1proc_oneWarp_keeneland} and \ref{fig:gflops_gpu_1proc_oneThread_keeneland} show the GFLOP/sec achieved by our custom GPU kernels running on the M2070 GPUs. The corresponding speedups achieved in each case over the CPU is provided in Figures~\ref{fig:speedup_1proc_oneWarp_keeneland} and \ref{fig:speedup_1proc_oneThread_keeneland}. 
+Figure~\ref{fig:gflops_cpu_1proc_keeneland} provides the average GFLOP/sec observed for a single time-step of Cosine Bell Advection (Figure~\ref{fig:gflops_cpu_1proc_keeneland_cosine}) and Vortex Roll-Up (Figure~\ref{fig:gflops_cpu_1proc_keeneland_vortex}) on a single CPU of Keeneland. In both cases the CPU runs a simple nested loop to perform the SpMV on data packed in CSR format. The Intel compiler applies auto-vectorization, auto-blocking and other strategies to the nested loop based on the ``-O2" compiler flag. 
 
+Figure~\ref{fig:gflops_gpu_1proc_oneWarp_keeneland_cosine} and \ref{fig:gflops_gpu_1proc_oneWarp_keeneland_vortex} show the GFLOP/sec achieved by operating one warp per stencil in our custom GPU kernels on the M2070 GPUs. The corresponding speedups achieved over the CPU is provided in Figures~\ref{fig:speedup_1proc_oneWarp_keeneland_cosine} and \ref{fig:speedup_1proc_oneWarp_keeneland_cosine}. 
+
+ and \ref{fig:gflops_gpu_1proc_oneThread_keeneland_cosine}
+
+The GFLOP/sec achieved by the one warp per stencil kernel 
 
 
 \begin{figure}
 \centering
 \begin{subfigure}[t]{0.425\textwidth}
+\centering
 \includegraphics[width=\textwidth]{../figures/keeneland_results/alltoallv_cosine/gflops_cpu_1proc_oneWarpPerStencil.pdf}
-\caption{One warp per stencil kernel on one GPU in Keeneland}
-\label{fig:gflops_cpu_1proc_keeneland}
-\end{subfigure} \\
+%\end{subfigure}
+\caption{Cosine Bell Advection}
+\label{fig:gflops_cpu_1proc_keeneland_cosine}
+\end{subfigure} 
+\quad
 \begin{subfigure}[t]{0.425\textwidth}
+\centering
+\includegraphics[width=\textwidth]{../figures/keeneland_results/alltoallv_vortex/gflops_cpu_1proc_oneWarpPerStencil.pdf}
+\caption{Vortex Roll-Up}
+\label{fig:gflops_cpu_1proc_keeneland_vortex}
+\end{subfigure}
+\caption{GFLOP/sec on one CPU (1 core) of the Keeneland GPU cluster.}
+\end{figure}
+
+\begin{figure}
+\centering
+\begin{subfigure}[t]{0.46\textwidth}
 \includegraphics[width=\textwidth]{../figures/keeneland_results/alltoallv_cosine/gflops_gpu_1proc_oneWarpPerStencil.pdf}
-\caption{One warp per stencil kernel on one GPU in Keeneland}
-\label{fig:gflops_gpu_1proc_oneWarp_keeneland}
+\caption{GFLOP/sec (Cosine Bell).}
+\label{fig:gflops_gpu_1proc_oneWarp_keeneland_cosine}
 \end{subfigure} 
 \quad
 \begin{subfigure}[t]{0.425\textwidth}
 \includegraphics[width=\textwidth]{../figures/keeneland_results/alltoallv_cosine/speedup_1proc_oneWarpPerStencil.pdf}
-\caption{One warp per stencil kernel on one GPU in Keeneland}
-\label{fig:speedup_1proc_oneWarp_keeneland}
+\caption{Speedup versus one CPU (Cosine Bell).}
+\label{fig:speedup_1proc_oneWarp_keeneland_cosine}
 \end{subfigure} 
-\caption{Cosine Bell Advection benchmarks from the Keeneland GPU cluster compare the average run-time of a single time-step of RK4 with three SpMVs per intermediate time-step evaluation.}
-\end{figure} 
 
-\begin{figure}
-\centering
-\begin{subfigure}[t]{0.425\textwidth}
-\includegraphics[width=\textwidth]{../figures/keeneland_results/alltoallv_cosine/gflops_gpu_1proc_oneThreadPerStencil.pdf}
-\caption{One warp per stencil kernel on one GPU in Keeneland}
-\label{fig:gflops_gpu_1proc_oneThread_keeneland}
-\end{subfigure}
-\quad
-\begin{subfigure}[t]{0.425\textwidth}
-\includegraphics[width=\textwidth]{../figures/keeneland_results/alltoallv_cosine/speedup_1proc_oneThreadPerStencil.pdf}
-\caption{One warp per stencil kernel on one GPU in Keeneland}
-\label{fig:speedup_1proc_oneThread_keeneland}
-\end{subfigure} 
-\caption{Cosine Bell Advection benchmarks from the Keeneland GPU cluster compare the average run-time of a single time-step of RK4 with three SpMVs per intermediate time-step evaluation.}
-\end{figure} 
-
-\section{Vortex Roll-Up on Keeneland} 
-
-\begin{figure}
-\centering
-\begin{subfigure}[t]{0.425\textwidth}
-\includegraphics[width=\textwidth]{../figures/keeneland_results/alltoallv_vortex/gflops_cpu_1proc_oneWarpPerStencil.pdf}
-\caption{One warp per stencil kernel on one GPU in Keeneland}
-\label{fig:gflops_cpu_1proc_keeneland}
-\end{subfigure} \\
-\begin{subfigure}[t]{0.425\textwidth}
+\begin{subfigure}[t]{0.46\textwidth}
 \includegraphics[width=\textwidth]{../figures/keeneland_results/alltoallv_vortex/gflops_gpu_1proc_oneWarpPerStencil.pdf}
-\caption{One warp per stencil kernel on one GPU in Keeneland}
-\label{fig:gflops_gpu_1proc_oneWarp_keeneland}
+\caption{GFLOP/sec (Vortex Roll-Up)}
+\label{fig:gflops_gpu_1proc_oneWarp_keeneland_vortex}
 \end{subfigure} 
 \quad
 \begin{subfigure}[t]{0.425\textwidth}
 \includegraphics[width=\textwidth]{../figures/keeneland_results/alltoallv_vortex/speedup_1proc_oneWarpPerStencil.pdf}
-\caption{One warp per stencil kernel on one GPU in Keeneland}
-\label{fig:speedup_1proc_oneWarp_keeneland}
+\caption{Speedup versus one CPU (Vortex Roll-Up)}
+\label{fig:speedup_1proc_oneWarp_keeneland_vortex}
 \end{subfigure} 
+\caption{GFLOP/sec and Speedup observed on one GPU (M2070) of the Keeneland GPU cluster for Cosine Bell Advection and Vortex Roll-Up computed via the ``Warp Per Stencil" kernel.}
+\end{figure} 
+
+\begin{figure}
+\centering
+\begin{subfigure}[t]{0.46\textwidth}
+\includegraphics[width=\textwidth]{../figures/keeneland_results/alltoallv_cosine/gflops_gpu_1proc_oneThreadPerStencil.pdf}
+\caption{GFLOP/sec (Cosine Bell).}
+\label{fig:gflops_gpu_1proc_oneThread_keeneland_cosine}
+\end{subfigure}
+\quad
 \begin{subfigure}[t]{0.425\textwidth}
+\includegraphics[width=\textwidth]{../figures/keeneland_results/alltoallv_cosine/speedup_1proc_oneThreadPerStencil.pdf}
+\caption{Speedup (Cosine Bell).}
+\label{fig:speedup_1proc_oneThread_keeneland_cosine}
+\end{subfigure} 
+
+\begin{subfigure}[t]{0.46\textwidth}
 \includegraphics[width=\textwidth]{../figures/keeneland_results/alltoallv_vortex/gflops_gpu_1proc_oneThreadPerStencil.pdf}
-\caption{One warp per stencil kernel on one GPU in Keeneland}
-\label{fig:gflops_gpu_1proc_oneThread_keeneland}
+\caption{GFLOP/sec (Vortex Roll-Up)}
+\label{fig:gflops_gpu_1proc_oneThread_keeneland_vortex}
 \end{subfigure}
 \quad
 \begin{subfigure}[t]{0.425\textwidth}
 \includegraphics[width=\textwidth]{../figures/keeneland_results/alltoallv_vortex/speedup_1proc_oneThreadPerStencil.pdf}
-\caption{One warp per stencil kernel on one GPU in Keeneland}
+\caption{Speedup (Vortex Roll-Up)}
 \label{fig:speedup_1proc_oneThread_keeneland}
 \end{subfigure} 
-\caption{Vortex Roll-up benchmarks from Keeneland compare the average run-time of a single time-step of RK4 with two SpMVs per intermediate time-step.}
+\caption{GFLOP/sec and Speedup observed on one GPU (M2070) of the Keeneland GPU cluster for Cosine Bell Advection with with a "One Thread Per Stencil" kernel.}
 \end{figure} 
+
+
 
 
 \section{Keeneland Scaling with MPI\_Alltoallv}
