Need to conclude on figures in appendix a

--- a/latex/keeneland_benchmarks.tex
+++ b/latex/keeneland_benchmarks.tex
@@ -33,10 +33,7 @@ Figure~\ref{fig:gflops_cpu_1proc_keeneland} provides the average GFLOP/sec obser
 
 Figure~\ref{fig:gflops_gpu_1proc_oneWarp_keeneland_cosine} and \ref{fig:gflops_gpu_1proc_oneWarp_keeneland_vortex} show the GFLOP/sec achieved by operating one warp per stencil in our custom GPU kernels on the M2070 GPUs. The corresponding speedups achieved over the CPU is provided in Figures~\ref{fig:speedup_1proc_oneWarp_keeneland_cosine} and \ref{fig:speedup_1proc_oneWarp_keeneland_cosine}. 
 
- and \ref{fig:gflops_gpu_1proc_oneThread_keeneland_cosine}
-
-The GFLOP/sec achieved by the one warp per stencil kernel 
-
+In similar fashion the GFLOP/sec achieved by operating one thread per stencil in our custom GPU kernels is shown in figure Figure~\ref{fig:gflops_gpu_1proc_oneWarp_keeneland_cosine} (Cosine Bell) and \ref{fig:gflops_gpu_1proc_oneWarp_keeneland_vortex} (Vortex Roll-Up). Speedups over the CPU for the thread approach are given in Figures~\ref{fig:speedup_1proc_oneWarp_keeneland_cosine} and \ref{fig:speedup_1proc_oneWarp_keeneland_cosine}. 
 
 \begin{figure}
 \centering
